// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deberia retornar [{Total : 2, Unique : 2, Borken : 1}] 1`] = `
Array [
  Object {
    "Borken": 1,
    "Total": 2,
    "Unique": 2,
  },
]
`;

exports[`Deberia retornar [{Total : 2, Unique: 2}] 1`] = `
Array [
  Object {
    "Total": 2,
    "Unique": 2,
  },
]
`;
